--- a/index.html
+++ b/index.html
@@ -73,6 +73,128 @@
             </div>
         </div>
     </header>
+    <section class="advantage">
+        <div class="advantage__header">
+            <h3 class="advantage__title">Why dlex</h3>
+            <p class="advantage__slogan">Creativity is nothing but the way to solve new problems.</p>
+        </div>
+        <div class="slider">
+            <div class="slider__wrapper">
+                <div class="tile">
+                    <div class="tile__wrapper">
+                        <img class="tile__logo" src="assets/images/pencil.svg"></img>
+                        <div class="tile__title">UI Design</div>
+                        <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                            amet sint. Velit officia consequat.</div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="tile__wrapper">
+                        <img class="tile__logo" src="assets/images/search.svg"></img>
+                        <div class="tile__title">UX & Research</div>
+                        <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                            amet sint. Velit officia consequat.</div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="tile__wrapper">
+                        <img class="tile__logo" src="assets/images/car.svg"></img>
+                        <div class="tile__title">Fast delivery</div>
+                        <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                            amet sint. Velit officia consequat.</div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="tile__wrapper">
+                        <img class="tile__logo" src="assets/images/mail.svg"></img>
+                        <div class="tile__title">Customer support</div>
+                        <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                            amet sint. Velit officia consequat.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="slider__pagination">
+                <div class="slider__arrow slider__arrow--left"><img src="assets/images/arrowPagination.svg" alt="">
+                </div>
+                <div class="slider__dots">
+                    <div class="slider__dots__dot__wrapper slider__dots__dot__wrapper--active">
+                        <div class="slider__dots__dot slider__dots__dot--active"></div>
+                    </div>
+                    <div class="slider__dots__dot__wrapper">
+                        <div class="slider__dots__dot"></div>
+                    </div>
+                    <div class="slider__dots__dot__wrapper">
+                        <div class="slider__dots__dot"></div>
+                    </div>
+                    <div class="slider__dots__dot__wrapper">
+                        <div class="slider__dots__dot"></div>
+                    </div>
+                </div>
+                <div class="slider__arrow slider__arrow--right"><img src="assets/images/arrowPagination.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="examples">
+        <div class="examples__title">
+            Optimize your payments
+        </div>
+        <h3 class="examples__header">Grow your revenue</h3>
+        <div class="examples__wrapper">
+            <div class="example">
+                <h4 class="example__title">Improve analytics</h4>
+                <div class="example__description">By leveraging predictive modeling and cross-source data
+                    synchronization or anomaly detection algorithms, empowering teams to make data-driven decisions.
+                </div>
+                <img src="assets/images/example1.jpg" alt="" class="example__image">
+                <ul class="example__list">
+                    <li class="example__list__item">
+                        <div class="example__list__daw"><img src="assets/images/daw.svg" alt=""></div>Upgrade your
+                        customer experience instantly
+                    </li>
+                    <li class="example__list__item">
+                        <div class="example__list__daw"><img src="assets/images/daw.svg" alt=""></div>Retain more,
+                        happier customers
+                    </li>
+                    <li class="example__list__item">
+                        <div class="example__list__daw"><img src="assets/images/daw.svg" alt=""></div>Start with
+                        done-for-you account setup
+                    </li>
+                </ul>
+            </div>
+            <div class="example">
+                <h4 class="example__title">Maximize acceptance</h4>
+                <div class="example__description">By using deception or false suggestions or suppression of truth or
+                    other unethical means, which are believed and relied upon by.
+                </div>
+                <img src="assets/images/example2.jpg" alt="" class="example__image">
+                <ul class="example__list">
+                    <li class="example__list__item">
+                        <div class="example__list__daw"><img src="assets/images/daw.svg" alt=""></div>Upgrade your
+                        customer experience instantly
+                    </li>
+                    <li class="example__list__item">
+                        <div class="example__list__daw"><img src="assets/images/daw.svg" alt=""></div>Retain more,
+                        happier customers
+                    </li>
+                    <li class="example__list__item">
+                        <div class="example__list__daw"><img src="assets/images/daw.svg" alt=""></div>Start with
+                        done-for-you account setup
+                    </li>
+                </ul>
+                <div class="note">
+                    <div class="note__title">Required Properties</div>
+                    <ul class="note__list">
+                        <li class="note__list__item"><img src="assets/images/ok.svg" alt="">title - <span>String</span>
+                        </li>
+                        <li class="note__list__item"><img src="assets/images/false.svg" alt="">isSafe - <span>Boolean</span></li>
+                        <li class="note__list__item"><img src="assets/images/ok.svg" alt="">rio_oa_gcp_labels -
+                            <span>Object</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="offer">
         <div class="offer__wrapper">
             <h2 class="offer__title">Everything you need for <span>$99 a month</span></h2>
