--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dlex </title>
     <link rel="stylesheet" href="css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
@@ -65,10 +66,10 @@
                     </div>
                 </div>
                 <div class="logos">
-                    <div class="logos__item logos__item-item1"><img src="/assets/images/card1.svg" alt=""></div>
-                    <div class="logos__item logos__item-item2"><img src="/assets/images/card2.svg" alt=""></div>
-                    <div class="logos__item logos__item-item3"><img src="/assets/images/card3.svg" alt=""></div>
-                    <div class="logos__item logos__item-item4"><img src="/assets/images/plus.svg" alt=""></div>
+                    <div class="logos__item logos__item-item1"><img src="assets/images/card1.svg" alt=""></div>
+                    <div class="logos__item logos__item-item2"><img src="assets/images/card2.svg" alt=""></div>
+                    <div class="logos__item logos__item-item3"><img src="assets/images/card3.svg" alt=""></div>
+                    <div class="logos__item logos__item-item4"><img src="assets/images/plus.svg" alt=""></div>
                 </div>
             </div>
         </div>
@@ -82,7 +83,7 @@
             <div class="slider__wrapper">
                 <div class="tile">
                     <div class="tile__wrapper">
-                        <img class="tile__logo" src="assets/images/pencil.svg"></img>
+                        <img class="tile__logo" src="assets/images/pencil.svg">
                         <div class="tile__title">UI Design</div>
                         <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                             amet sint. Velit officia consequat.</div>
@@ -90,7 +91,7 @@
                 </div>
                 <div class="tile">
                     <div class="tile__wrapper">
-                        <img class="tile__logo" src="assets/images/search.svg"></img>
+                        <img class="tile__logo" src="assets/images/search.svg">
                         <div class="tile__title">UX & Research</div>
                         <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                             amet sint. Velit officia consequat.</div>
@@ -98,7 +99,7 @@
                 </div>
                 <div class="tile">
                     <div class="tile__wrapper">
-                        <img class="tile__logo" src="assets/images/car.svg"></img>
+                        <img class="tile__logo" src="assets/images/car.svg">
                         <div class="tile__title">Fast delivery</div>
                         <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                             amet sint. Velit officia consequat.</div>
@@ -106,7 +107,7 @@
                 </div>
                 <div class="tile">
                     <div class="tile__wrapper">
-                        <img class="tile__logo" src="assets/images/mail.svg"></img>
+                        <img class="tile__logo" src="assets/images/mail.svg">
                         <div class="tile__title">Customer support</div>
                         <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                             amet sint. Velit officia consequat.</div>
@@ -187,9 +188,12 @@
                     <ul class="note__list">
                         <li class="note__list__item"><img src="assets/images/ok.svg" alt="">title - <span>String</span>
                         </li>
-                        <li class="note__list__item"><img src="assets/images/false.svg" alt="">isSafe - <span>Boolean</span></li>
+                        <li class="note__list__item"><img src="assets/images/false.svg" alt="">isSafe -
+                            <span>Boolean</span>
+                        </li>
                         <li class="note__list__item"><img src="assets/images/ok.svg" alt="">rio_oa_gcp_labels -
-                            <span>Object</span></li>
+                            <span>Object</span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -201,7 +205,6 @@
             <p class="offer__p">Includes every feature we offer plus unlimited projects and unlimited users</p>
         </div>
         <button class="cta__button cta__button--offer">Get Started Now</button>
-        <!-- <button class="offer__button">Get Started Now</button> -->
     </section>
     <section class="cta">
         <div class="cta__wrapper">
@@ -225,6 +228,7 @@
                     <li class="socialMedia__item"><img src="assets/images/logo-twitter.svg" alt=""></li>
                     <li class="socialMedia__item"><img src="assets/images/logo-instagram.svg" alt=""></li>
                     <li class="socialMedia__item"><img src="assets/images/logo-github.svg" alt=""></li>
+                </ul>
             </div>
             <div class="footer__info">
                 <div class="footer__card">
@@ -265,10 +269,32 @@
                 </div>
             </div>
         </div>
+        <div class="footer__copyright">© 2025 Dlex, Inc. All rights reserved</div>
+    </footer>
+    <div class="popup">
+        <div class="popup__wrapper">
+            <div class="modal">
+                <div class="modal__logo"><img src="assets/images/onDark.svg" alt=""></div>
+                <div class="modal__title">Join the club</div>
+                <div class="modal__offer">Subscribe and Get an Extra
+                    25% Off on your first purchase.</div>
+                <form action="" class="modal__form">
+                    <input type="email" class="modal__email" placeholder="Email address">
+                    <input type="submit" class="modal__submit" value="Subscribe">
+                </form>
+                <div class="modal__rules">By signing up, you agree to Privacy Policy
+                    and Terms of Use.</div>
+            </div>
+            <div class="popup__image">
+                <img src="assets/images/lamp.svg" alt="">
+            </div>
+            <div class="close">
+                <img src="assets/images/close.svg" alt="" class="close__image">
+            </div>
 
         </div>
-        <div class="footer__сopyright">© 2025 Dlex, Inc. All rights reserved</div>
-    </footer>
+    </div>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
