* - рефакторинг, оживление слайдера

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
                             amet sint. Velit officia consequat.</div>
                     </div>
                 </div>
+                <!-- <div class="tile">
+                    <div class="tile__wrapper">
+                        <img class="tile__logo" src="assets/images/mail.svg">
+                        <div class="tile__title">Customer support</div>
+                        <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                            amet sint. Velit officia consequat.</div>
+                    </div>
+                </div> -->
             </div>
             <div class="slider__pagination">
                 <div class="slider__arrow slider__arrow--left"><img src="assets/images/arrowPagination.svg" alt="">
@@ -233,6 +241,7 @@
             <div class="footer__info">
                 <div class="footer__card">
                     <h3 class="card__title">Solutions</h3>
+                    <div class="arrow-footer">&#9654;</div>
                     <ul class="card__list">
                         <li class="card__item">Marketing</li>
                         <li class="card__item">Analytics</li>
@@ -242,6 +251,7 @@
                 </div>
                 <div class="footer__card">
                     <h3 class="card__title">Support</h3>
+                    <div class="arrow-footer">&#9654;</div>
                     <ul class="card__list">
                         <li class="card__item">Pricing</li>
                         <li class="card__item">Documentation</li>
@@ -251,6 +261,7 @@
                 </div>
                 <div class="footer__card">
                     <h3 class="card__title">Company</h3>
+                    <div class="arrow-footer">&#9654;</div>
                     <ul class="card__list">
                         <li class="card__item">About</li>
                         <li class="card__item">Blog</li>
@@ -261,6 +272,7 @@
                 </div>
                 <div class="footer__card">
                     <h3 class="card__title">Legal</h3>
+                    <div class="arrow-footer">&#9654;</div>
                     <ul class="card__list">
                         <li class="card__item">Claim</li>
                         <li class="card__item">Privacy</li>
