--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1 class="hero__title">Have no fear of perfection,
                 you'll never reach it.</h1>
             <p class="hero__description">Create interactive user flow diagrams that tell a story.</p>
-            <video src="assets/video/Jingle_Bell_Rock.mp4" controls muted class="hero__video"></video>
+            <video src="assets/video/Jingle_Bell_Rock.mp4" controls class="hero__video"></video>
 
             <div class="hero__diagram">
                 <img src="assets/images/diagram.svg" alt="" class="hero__diagram__image">
@@ -113,31 +113,35 @@
                             amet sint. Velit officia consequat.</div>
                     </div>
                 </div>
-                <!-- <div class="tile">
+                <div class="tile">
                     <div class="tile__wrapper">
                         <img class="tile__logo" src="assets/images/mail.svg">
                         <div class="tile__title">Customer support</div>
                         <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
                             amet sint. Velit officia consequat.</div>
                     </div>
-                </div> -->
+                </div>
+                <div class="tile">
+                    <div class="tile__wrapper">
+                        <img class="tile__logo" src="assets/images/mail.svg">
+                        <div class="tile__title">Customer support</div>
+                        <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                            amet sint. Velit officia consequat.</div>
+                    </div>
+                </div>
+                <div class="tile">
+                    <div class="tile__wrapper">
+                        <img class="tile__logo" src="assets/images/mail.svg">
+                        <div class="tile__title">Customer support</div>
+                        <div class="tile__description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                            amet sint. Velit officia consequat.</div>
+                    </div>
+                </div>
             </div>
             <div class="slider__pagination">
                 <div class="slider__arrow slider__arrow--left"><img src="assets/images/arrowPagination.svg" alt="">
                 </div>
                 <div class="slider__dots">
-                    <div class="slider__dots__dot__wrapper slider__dots__dot__wrapper--active">
-                        <div class="slider__dots__dot slider__dots__dot--active"></div>
-                    </div>
-                    <div class="slider__dots__dot__wrapper">
-                        <div class="slider__dots__dot"></div>
-                    </div>
-                    <div class="slider__dots__dot__wrapper">
-                        <div class="slider__dots__dot"></div>
-                    </div>
-                    <div class="slider__dots__dot__wrapper">
-                        <div class="slider__dots__dot"></div>
-                    </div>
                 </div>
                 <div class="slider__arrow slider__arrow--right"><img src="assets/images/arrowPagination.svg" alt="">
                 </div>
